examples/iptables.txt
[root@justin-cwes-01 ~]# iptables-save
# Generated by iptables-save v1.4.21 on Tue Jul 23 03:38:01 2019
*mangle
:PREROUTING ACCEPT [492:24822]
:INPUT ACCEPT [16375:49375709]
:FORWARD ACCEPT [15950:2267532]
:OUTPUT ACCEPT [16350:37135977]
:POSTROUTING ACCEPT [32296:39403301]
:cali-PREROUTING - [0:0]
:cali-failsafe-in - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-pi-_-w86bMd_bL8-CKRBUaL - [0:0]
:cali-po-_-w86bMd_bL8-CKRBUaL - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A cali-PREROUTING -m comment --comment "cali:6BJqBjBC7crtA-7-" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:KX7AGNd6rMcDUai6" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:wNH7KsA3ILKJBsY9" -j cali-from-host-endpoint
-A cali-PREROUTING -m comment --comment "cali:Cg96MgVuoPm7UMRo" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:wWFQM43tJU7wwnFZ" -m multiport --dports 22 -j ACCEPT
-A cali-failsafe-in -p udp -m comment --comment "cali:LwNV--R8MjeUYacw" -m multiport --dports 68 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:QOO5NUOqOSS1_Iw0" -m multiport --dports 179 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:cwZWoBSwVeIAZmVN" -m multiport --dports 2379 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:7FbNXT91kugE_upR" -m multiport --dports 2380 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:ywE9WYUBEpve70WT" -m multiport --dports 6666 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:l-WQSVBf_lygPR0J" -m multiport --dports 6667 -j ACCEPT
-A cali-pi-_-w86bMd_bL8-CKRBUaL -m comment --comment "cali:R2udFT2hfN45YESY" -j MARK --set-xmark 0x40000/0xc0000
-A cali-pi-_-w86bMd_bL8-CKRBUaL -s 10.10.1.0/24 -m comment --comment "cali:p5h8hm_36yZUqZvl" -j MARK --set-xmark 0x0/0x40000
-A cali-pi-_-w86bMd_bL8-CKRBUaL -s 10.10.0.0/16 -p tcp -m comment --comment "cali:v-llWYlUSIWIojDO" -m multiport --dports 6379 -m mark --mark 0x40000/0x40000 -j MARK --set-xmark 0x10000/0x10000
-A cali-pi-_-w86bMd_bL8-CKRBUaL -m comment --comment "cali:ueUewffixjCspPIX" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pi-_-w86bMd_bL8-CKRBUaL -p tcp -m comment --comment "cali:VqkZmVIYeDv6tXzk" -m set --match-set cali40s:F7ZiXz_PbMa5Hy2nQRJmYga src -m multiport --dports 6379 -j MARK --set-xmark 0x10000/0x10000
-A cali-pi-_-w86bMd_bL8-CKRBUaL -m comment --comment "cali:LB1T1dsowpqsBJjb" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pi-_-w86bMd_bL8-CKRBUaL -p tcp -m comment --comment "cali:rIIK86VMgLoiCLxY" -m set --match-set cali40s:wshVv5vS9KoqQCk0vejZOWN src -m multiport --dports 6379 -j MARK --set-xmark 0x10000/0x10000
-A cali-pi-_-w86bMd_bL8-CKRBUaL -m comment --comment "cali:XL5MAjigAp_MK7j-" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-po-_-w86bMd_bL8-CKRBUaL -d 10.0.0.0/24 -p tcp -m comment --comment "cali:xknN47nMfQJsVAEH" -m multiport --dports 5978 -j MARK --set-xmark 0x10000/0x10000
-A cali-po-_-w86bMd_bL8-CKRBUaL -m comment --comment "cali:Is9GYpEhanIAfvw-" -m mark --mark 0x10000/0x10000 -j RETURN
COMMIT
# Completed on Tue Jul 23 03:38:01 2019
# Generated by iptables-save v1.4.21 on Tue Jul 23 03:38:01 2019
*raw
:PREROUTING ACCEPT [32499:51650201]
:OUTPUT ACCEPT [16357:37137645]
:cali-OUTPUT - [0:0]
:cali-PREROUTING - [0:0]
:cali-failsafe-in - [0:0]
:cali-failsafe-out - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-pi-_-w86bMd_bL8-CKRBUaL - [0:0]
:cali-po-_-w86bMd_bL8-CKRBUaL - [0:0]
:cali-to-host-endpoint - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A cali-OUTPUT -m comment --comment "cali:njdnLwYeGqBJyMxW" -j MARK --set-xmark 0x0/0xf0000
-A cali-OUTPUT -m comment --comment "cali:rz86uTUcEZAfFsh7" -j cali-to-host-endpoint
-A cali-OUTPUT -m comment --comment "cali:pN0F5zD0b8yf9W1Z" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:XFX5xbM8B9qR10JG" -j MARK --set-xmark 0x0/0xf0000
-A cali-PREROUTING -i cali+ -m comment --comment "cali:EWMPb0zVROM-woQp" -j MARK --set-xmark 0x40000/0x40000
-A cali-PREROUTING -m comment --comment "cali:Ek_rsNpunyDlK3sH" -m mark --mark 0x0/0x40000 -j cali-from-host-endpoint
-A cali-PREROUTING -m comment --comment "cali:nM-DzTFPwQbQvtRj" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:wWFQM43tJU7wwnFZ" -m multiport --dports 22 -j ACCEPT
-A cali-failsafe-in -p udp -m comment --comment "cali:LwNV--R8MjeUYacw" -m multiport --dports 68 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:QOO5NUOqOSS1_Iw0" -m multiport --dports 179 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:cwZWoBSwVeIAZmVN" -m multiport --dports 2379 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:7FbNXT91kugE_upR" -m multiport --dports 2380 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:ywE9WYUBEpve70WT" -m multiport --dports 6666 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:l-WQSVBf_lygPR0J" -m multiport --dports 6667 -j ACCEPT
-A cali-failsafe-in -p udp -m comment --comment "cali:k9jPBsnz833bYNtN" -m multiport --sports 53 -j ACCEPT
-A cali-failsafe-in -p udp -m comment --comment "cali:h6bDkHXiHjFdQFvi" -m multiport --sports 67 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:ZxyjJQRmKuKXDHob" -m multiport --sports 179 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:simwjHaxrPmaHOEO" -m multiport --sports 2379 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:hvk-Re2iN6cMDIO-" -m multiport --sports 2380 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:czejYL2nB2RLhrhj" -m multiport --sports 6666 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:Poam7ro8PATnz_3V" -m multiport --sports 6667 -j ACCEPT
-A cali-failsafe-out -p udp -m comment --comment "cali:82hjfji-wChFhAqL" -m multiport --dports 53 -j ACCEPT
-A cali-failsafe-out -p udp -m comment --comment "cali:TNM3RfEjbNr72hgH" -m multiport --dports 67 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:ycxKitIl4u3dK0HR" -m multiport --dports 179 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:hxjEWyxdkXXkdvut" -m multiport --dports 2379 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:cA_GLtruuvG88KiO" -m multiport --dports 2380 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:Sb1hkLYFMrKS6r01" -m multiport --dports 6666 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:UwLSebGONJUG4yG-" -m multiport --dports 6667 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:r23CvAiW0ROtMTyk" -m multiport --sports 22 -j ACCEPT
-A cali-failsafe-out -p udp -m comment --comment "cali:D9jU-Lf4ZjKkTtdD" -m multiport --sports 68 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:5zDpOHUwMrjzLzZl" -m multiport --sports 179 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:Jq44rynzFYoWGr4q" -m multiport --sports 2379 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:OiGBCpR5GP0HW_y6" -m multiport --sports 2380 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:iwXWeITN771fTZ2N" -m multiport --sports 6666 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:Ot9A94gzys2kTtDj" -m multiport --sports 6667 -j ACCEPT
-A cali-pi-_-w86bMd_bL8-CKRBUaL -m comment --comment "cali:R2udFT2hfN45YESY" -j MARK --set-xmark 0x40000/0xc0000
-A cali-pi-_-w86bMd_bL8-CKRBUaL -s 10.10.1.0/24 -m comment --comment "cali:p5h8hm_36yZUqZvl" -j MARK --set-xmark 0x0/0x40000
-A cali-pi-_-w86bMd_bL8-CKRBUaL -s 10.10.0.0/16 -p tcp -m comment --comment "cali:v-llWYlUSIWIojDO" -m multiport --dports 6379 -m mark --mark 0x40000/0x40000 -j MARK --set-xmark 0x10000/0x10000
-A cali-pi-_-w86bMd_bL8-CKRBUaL -m comment --comment "cali:ueUewffixjCspPIX" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pi-_-w86bMd_bL8-CKRBUaL -p tcp -m comment --comment "cali:VqkZmVIYeDv6tXzk" -m set --match-set cali40s:F7ZiXz_PbMa5Hy2nQRJmYga src -m multiport --dports 6379 -j MARK --set-xmark 0x10000/0x10000
-A cali-pi-_-w86bMd_bL8-CKRBUaL -m comment --comment "cali:LB1T1dsowpqsBJjb" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pi-_-w86bMd_bL8-CKRBUaL -p tcp -m comment --comment "cali:rIIK86VMgLoiCLxY" -m set --match-set cali40s:wshVv5vS9KoqQCk0vejZOWN src -m multiport --dports 6379 -j MARK --set-xmark 0x10000/0x10000
-A cali-pi-_-w86bMd_bL8-CKRBUaL -m comment --comment "cali:XL5MAjigAp_MK7j-" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-po-_-w86bMd_bL8-CKRBUaL -d 10.0.0.0/24 -p tcp -m comment --comment "cali:xknN47nMfQJsVAEH" -m multiport --dports 5978 -j MARK --set-xmark 0x10000/0x10000
-A cali-po-_-w86bMd_bL8-CKRBUaL -m comment --comment "cali:Is9GYpEhanIAfvw-" -m mark --mark 0x10000/0x10000 -j RETURN
COMMIT
# Completed on Tue Jul 23 03:38:01 2019
# Generated by iptables-save v1.4.21 on Tue Jul 23 03:38:01 2019
*nat
:PREROUTING ACCEPT [27:1302]
:INPUT ACCEPT [6:390]
:OUTPUT ACCEPT [15:832]
:POSTROUTING ACCEPT [23:1248]
:CNI-HOSTPORT-DNAT - [0:0]
:CNI-HOSTPORT-MASQ - [0:0]
:CNI-HOSTPORT-SETMARK - [0:0]
:DOCKER - [0:0]
:KUBE-MARK-DROP - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-SEP-2RWZTMKGKH32LWJ4 - [0:0]
:KUBE-SEP-3P5OZ2Y6H7P2AE54 - [0:0]
:KUBE-SEP-3VPWKSZIGUWJWZOF - [0:0]
:KUBE-SEP-7SKUVD7HGWO7O7FY - [0:0]
:KUBE-SEP-CF3T254QPZ7J5QQP - [0:0]
:KUBE-SEP-DRQOGBAO47QNIPVC - [0:0]
:KUBE-SEP-E5SH72U7QA6TI37N - [0:0]
:KUBE-SEP-EA56CDCS7UYOWX2C - [0:0]
:KUBE-SEP-G2QRSU3RNTMCCZD2 - [0:0]
:KUBE-SEP-H6E4XYOQYQXKZZMO - [0:0]
:KUBE-SEP-HSGO6WAI7KT77UMI - [0:0]
:KUBE-SEP-IXDCICTBIWPAJTI7 - [0:0]
:KUBE-SEP-K7JCWDPNFYGHOKTA - [0:0]
:KUBE-SEP-L3UPAOQ5VBZHUYBN - [0:0]
:KUBE-SEP-M4JERVXYORADU5AZ - [0:0]
:KUBE-SEP-MF6XUIX2DBSFLCAR - [0:0]
:KUBE-SEP-O5DTHTYOWZSX2BPC - [0:0]
:KUBE-SEP-OBQ4M2DFGCN6O7OQ - [0:0]
:KUBE-SEP-PB2COJNJ7VIMLJPR - [0:0]
:KUBE-SEP-PHR3XTVU3ILKE2MV - [0:0]
:KUBE-SEP-RUVXSHOHP3PSXM35 - [0:0]
:KUBE-SEP-S4EWUDGANLFP75YP - [0:0]
:KUBE-SEP-SIT6FOK67ADJNBI4 - [0:0]
:KUBE-SEP-T2O54T5HMBSDYKYD - [0:0]
:KUBE-SEP-UOAC6H45GU42FIJE - [0:0]
:KUBE-SEP-UTYHUYSZHUUEPHO5 - [0:0]
:KUBE-SEP-UY4FAV4HYQKMRI7Y - [0:0]
:KUBE-SEP-V63URAHK76NUO5YS - [0:0]
:KUBE-SEP-XQGQWP4ONHIDJ4PX - [0:0]
:KUBE-SEP-XZE4UVKLCDJESKZE - [0:0]
:KUBE-SEP-YENWDQVLSUU52LMW - [0:0]
:KUBE-SEP-YMQ5PNYJND7UQY4A - [0:0]
:KUBE-SEP-YTUN5MYBPEJ5476W - [0:0]
:KUBE-SEP-Z5PHILQDCQP4LCWB - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-4CTFL6F4RLITD2IR - [0:0]
:KUBE-SVC-6LIXASSUS2NL45YH - [0:0]
:KUBE-SVC-A33F7BKULY3UTOJ2 - [0:0]
:KUBE-SVC-BGZINMN3OOAODBSK - [0:0]
:KUBE-SVC-BJM46V3U5RZHCFRZ - [0:0]
:KUBE-SVC-E4IO3N56OWLWVIM5 - [0:0]
:KUBE-SVC-ERIFXISQEP7F7OF4 - [0:0]
:KUBE-SVC-GCTYBQLDVAIPCBAU - [0:0]
:KUBE-SVC-H264ZQILZHRJ5NQR - [0:0]
:KUBE-SVC-K7J76NXP7AUZVFGS - [0:0]
:KUBE-SVC-LC5QY66VUV2HJ6WZ - [0:0]
:KUBE-SVC-N5GGERZV6LKDHGVD - [0:0]
:KUBE-SVC-NMG6BVPK2ZFNWNWF - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-NRRD52Q4PFFHZPMX - [0:0]
:KUBE-SVC-R7VIYLB66COEE3CB - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
:KUBE-SVC-XI5SUYJ37EMWLQAJ - [0:0]
:KUBE-SVC-XU6G7KNAVGMVPMGP - [0:0]
:cali-OUTPUT - [0:0]
:cali-POSTROUTING - [0:0]
:cali-PREROUTING - [0:0]
:cali-fip-dnat - [0:0]
:cali-fip-snat - [0:0]
:cali-nat-outgoing - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A PREROUTING -m addrtype --dst-type LOCAL -j CNI-HOSTPORT-DNAT
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT -m addrtype --dst-type LOCAL -j CNI-HOSTPORT-DNAT
-A POSTROUTING -m comment --comment "cali:O3lYWMrLQYEMJtB5" -j cali-POSTROUTING
-A POSTROUTING -m comment --comment "CNI portfwd requiring masquerade" -j CNI-HOSTPORT-MASQ
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -o docker0 -m addrtype --src-type LOCAL -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p tcp -m tcp --dport 2380 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p tcp -m tcp --dport 2379 -j MASQUERADE
-A POSTROUTING -s 172.17.0.3/32 -d 172.17.0.3/32 -p tcp -m tcp --dport 60053 -j MASQUERADE
-A POSTROUTING -s 172.17.0.3/32 -d 172.17.0.3/32 -p udp -m udp --dport 60053 -j MASQUERADE
-A POSTROUTING -s 172.17.0.5/32 -d 172.17.0.5/32 -p tcp -m tcp --dport 5000 -j MASQUERADE
-A POSTROUTING -s 172.17.0.4/32 -d 172.17.0.4/32 -p tcp -m tcp --dport 5000 -j MASQUERADE
-A CNI-HOSTPORT-MASQ -m mark --mark 0x2000/0x2000 -j MASQUERADE
-A CNI-HOSTPORT-SETMARK -m comment --comment "CNI portfwd masquerade mark" -j MARK --set-xmark 0x2000/0x2000
-A DOCKER -p tcp -m tcp --dport 2380 -j DNAT --to-destination 172.17.0.2:2380
-A DOCKER -p tcp -m tcp --dport 2379 -j DNAT --to-destination 172.17.0.2:2379
-A DOCKER -d 127.0.0.1/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 172.17.0.3:60053
-A DOCKER -d 127.0.0.1/32 -p udp -m udp --dport 53 -j DNAT --to-destination 172.17.0.3:60053
-A DOCKER -d 192.16.1.51/32 -p tcp -m tcp --dport 5002 -j DNAT --to-destination 172.17.0.5:5000
-A DOCKER -d 192.16.1.51/32 -p tcp -m tcp --dport 5001 -j DNAT --to-destination 172.17.0.4:5000
-A KUBE-MARK-DROP -j MARK --set-xmark 0x8000/0x8000
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -m mark --mark 0x4000/0x4000 -j MASQUERADE
-A KUBE-SEP-2RWZTMKGKH32LWJ4 -s 192.168.1.129/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-2RWZTMKGKH32LWJ4 -p udp -m udp -j DNAT --to-destination 192.168.1.129:53
-A KUBE-SEP-3P5OZ2Y6H7P2AE54 -s 192.16.1.29/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-3P5OZ2Y6H7P2AE54 -p tcp -m tcp -j DNAT --to-destination 192.16.1.29:8082
-A KUBE-SEP-3VPWKSZIGUWJWZOF -s 192.16.1.29/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-3VPWKSZIGUWJWZOF -p tcp -m tcp -j DNAT --to-destination 192.16.1.29:8443
-A KUBE-SEP-7SKUVD7HGWO7O7FY -s 192.168.1.69/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-7SKUVD7HGWO7O7FY -p tcp -m tcp -j DNAT --to-destination 192.168.1.69:80
-A KUBE-SEP-CF3T254QPZ7J5QQP -s 192.16.1.64/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-CF3T254QPZ7J5QQP -p tcp -m tcp -j DNAT --to-destination 192.16.1.64:8082
-A KUBE-SEP-DRQOGBAO47QNIPVC -s 192.168.1.3/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-DRQOGBAO47QNIPVC -p tcp -m tcp -j DNAT --to-destination 192.168.1.3:6443
-A KUBE-SEP-E5SH72U7QA6TI37N -s 192.168.1.192/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-E5SH72U7QA6TI37N -p tcp -m tcp -j DNAT --to-destination 192.168.1.192:80
-A KUBE-SEP-EA56CDCS7UYOWX2C -s 192.168.1.136/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-EA56CDCS7UYOWX2C -p tcp -m tcp -j DNAT --to-destination 192.168.1.136:5000
-A KUBE-SEP-G2QRSU3RNTMCCZD2 -s 192.168.1.193/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-G2QRSU3RNTMCCZD2 -p tcp -m tcp -j DNAT --to-destination 192.168.1.193:53
-A KUBE-SEP-H6E4XYOQYQXKZZMO -s 192.168.1.66/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-H6E4XYOQYQXKZZMO -p tcp -m tcp -j DNAT --to-destination 192.168.1.66:8082
-A KUBE-SEP-HSGO6WAI7KT77UMI -s 192.168.1.130/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-HSGO6WAI7KT77UMI -p tcp -m tcp -j DNAT --to-destination 192.168.1.130:8080
-A KUBE-SEP-IXDCICTBIWPAJTI7 -s 192.168.1.65/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-IXDCICTBIWPAJTI7 -p udp -m udp -j DNAT --to-destination 192.168.1.65:53
-A KUBE-SEP-K7JCWDPNFYGHOKTA -s 192.168.1.68/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-K7JCWDPNFYGHOKTA -p tcp -m tcp -j DNAT --to-destination 192.168.1.68:443
-A KUBE-SEP-L3UPAOQ5VBZHUYBN -s 192.16.1.64/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-L3UPAOQ5VBZHUYBN -p tcp -m tcp -j DNAT --to-destination 192.16.1.64:24007
-A KUBE-SEP-M4JERVXYORADU5AZ -s 192.16.1.64/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-M4JERVXYORADU5AZ -p tcp -m tcp -j DNAT --to-destination 192.16.1.64:8443
-A KUBE-SEP-MF6XUIX2DBSFLCAR -s 192.168.1.199/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-MF6XUIX2DBSFLCAR -p tcp -m tcp -j DNAT --to-destination 192.168.1.199:8443
-A KUBE-SEP-O5DTHTYOWZSX2BPC -s 192.16.1.51/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-O5DTHTYOWZSX2BPC -p tcp -m tcp -j DNAT --to-destination 192.16.1.51:8443
-A KUBE-SEP-OBQ4M2DFGCN6O7OQ -s 192.168.1.131/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-OBQ4M2DFGCN6O7OQ -p tcp -m tcp -j DNAT --to-destination 192.168.1.131:44134
-A KUBE-SEP-PB2COJNJ7VIMLJPR -s 192.168.1.132/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-PB2COJNJ7VIMLJPR -p tcp -m tcp -j DNAT --to-destination 192.168.1.132:8080
-A KUBE-SEP-PHR3XTVU3ILKE2MV -s 192.16.1.29/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-PHR3XTVU3ILKE2MV -p tcp -m tcp -j DNAT --to-destination 192.16.1.29:24007
-A KUBE-SEP-RUVXSHOHP3PSXM35 -s 192.168.1.133/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-RUVXSHOHP3PSXM35 -p tcp -m tcp -j DNAT --to-destination 192.168.1.133:6379
-A KUBE-SEP-S4EWUDGANLFP75YP -s 192.168.1.193/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-S4EWUDGANLFP75YP -p udp -m udp -j DNAT --to-destination 192.168.1.193:53
-A KUBE-SEP-SIT6FOK67ADJNBI4 -s 192.168.1.0/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-SIT6FOK67ADJNBI4 -p tcp -m tcp -j DNAT --to-destination 192.168.1.0:8080
-A KUBE-SEP-T2O54T5HMBSDYKYD -s 192.168.1.67/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-T2O54T5HMBSDYKYD -p tcp -m tcp -j DNAT --to-destination 192.168.1.67:8080
-A KUBE-SEP-UOAC6H45GU42FIJE -s 192.168.1.128/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-UOAC6H45GU42FIJE -p tcp -m tcp -j DNAT --to-destination 192.168.1.128:80
-A KUBE-SEP-UTYHUYSZHUUEPHO5 -s 192.168.1.196/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-UTYHUYSZHUUEPHO5 -p tcp -m tcp -j DNAT --to-destination 192.168.1.196:8080
-A KUBE-SEP-UY4FAV4HYQKMRI7Y -s 192.168.1.64/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-UY4FAV4HYQKMRI7Y -p tcp -m tcp -j DNAT --to-destination 192.168.1.64:80
-A KUBE-SEP-V63URAHK76NUO5YS -s 192.168.1.129/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-V63URAHK76NUO5YS -p tcp -m tcp -j DNAT --to-destination 192.168.1.129:53
-A KUBE-SEP-XQGQWP4ONHIDJ4PX -s 192.168.1.65/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-XQGQWP4ONHIDJ4PX -p tcp -m tcp -j DNAT --to-destination 192.168.1.65:53
-A KUBE-SEP-XZE4UVKLCDJESKZE -s 192.16.1.51/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-XZE4UVKLCDJESKZE -p tcp -m tcp -j DNAT --to-destination 192.16.1.51:24007
-A KUBE-SEP-YENWDQVLSUU52LMW -s 192.168.1.74/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-YENWDQVLSUU52LMW -p tcp -m tcp -j DNAT --to-destination 192.168.1.74:8443
-A KUBE-SEP-YMQ5PNYJND7UQY4A -s 192.168.1.197/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-YMQ5PNYJND7UQY4A -p tcp -m tcp -j DNAT --to-destination 192.168.1.197:8083
-A KUBE-SEP-YTUN5MYBPEJ5476W -s 192.16.1.51/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-YTUN5MYBPEJ5476W -p tcp -m tcp -j DNAT --to-destination 192.16.1.51:8082
-A KUBE-SEP-Z5PHILQDCQP4LCWB -s 192.168.1.195/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-Z5PHILQDCQP4LCWB -p tcp -m tcp -j DNAT --to-destination 192.168.1.195:9090
-A KUBE-SERVICES ! -s 192.168.1.0/24 -d 10.254.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.254.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-SVC-TCOU7JCQXEZGVUNU
-A KUBE-SERVICES ! -s 192.168.1.0/24 -d 10.254.0.101/32 -p tcp -m comment --comment "ncms/heketi-api:heketi cluster IP" -m tcp --dport 8080 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.254.0.101/32 -p tcp -m comment --comment "ncms/heketi-api:heketi cluster IP" -m tcp --dport 8080 -j KUBE-SVC-6LIXASSUS2NL45YH
-A KUBE-SERVICES ! -s 192.168.1.0/24 -d 10.254.135.210/32 -p tcp -m comment --comment "ncms/cert-manager-webhook:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.254.135.210/32 -p tcp -m comment --comment "ncms/cert-manager-webhook:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-A33F7BKULY3UTOJ2
-A KUBE-SERVICES ! -s 192.168.1.0/24 -d 10.254.177.29/32 -p tcp -m comment --comment "kube-system/local-volume-provisioner:metrics cluster IP" -m tcp --dport 8080 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.254.177.29/32 -p tcp -m comment --comment "kube-system/local-volume-provisioner:metrics cluster IP" -m tcp --dport 8080 -j KUBE-SVC-H264ZQILZHRJ5NQR
-A KUBE-SERVICES ! -s 192.168.1.0/24 -d 10.254.54.217/32 -p tcp -m comment --comment "ncms/cbur-master-cbur:cbur-master-cbur-http cluster IP" -m tcp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.254.54.217/32 -p tcp -m comment --comment "ncms/cbur-master-cbur:cbur-master-cbur-http cluster IP" -m tcp --dport 80 -j KUBE-SVC-XU6G7KNAVGMVPMGP
-A KUBE-SERVICES ! -s 192.168.1.0/24 -d 10.254.117.55/32 -p tcp -m comment --comment "ncms/bcmt-redis:redis cluster IP" -m tcp --dport 6379 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.254.117.55/32 -p tcp -m comment --comment "ncms/bcmt-redis:redis cluster IP" -m tcp --dport 6379 -j KUBE-SVC-R7VIYLB66COEE3CB
-A KUBE-SERVICES ! -s 192.168.1.0/24 -d 10.254.0.105/32 -p tcp -m comment --comment "ncms/bcmt-keycloak: cluster IP" -m tcp --dport 8089 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.254.0.105/32 -p tcp -m comment --comment "ncms/bcmt-keycloak: cluster IP" -m tcp --dport 8089 -j KUBE-SVC-N5GGERZV6LKDHGVD
-A KUBE-SERVICES ! -s 192.168.1.0/24 -d 10.254.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.254.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES ! -s 192.168.1.0/24 -d 10.254.47.143/32 -p tcp -m comment --comment "kube-system/metrics-server: cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.254.47.143/32 -p tcp -m comment --comment "kube-system/metrics-server: cluster IP" -m tcp --dport 443 -j KUBE-SVC-LC5QY66VUV2HJ6WZ
-A KUBE-SERVICES ! -s 192.168.1.0/24 -d 10.254.0.3/32 -p tcp -m comment --comment "kube-system/kube-dashboard: cluster IP" -m tcp --dport 81 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.254.0.3/32 -p tcp -m comment --comment "kube-system/kube-dashboard: cluster IP" -m tcp --dport 81 -j KUBE-SVC-XI5SUYJ37EMWLQAJ
-A KUBE-SERVICES ! -s 192.168.1.0/24 -d 10.254.53.47/32 -p tcp -m comment --comment "kube-system/tiller-deploy:tiller cluster IP" -m tcp --dport 44134 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.254.53.47/32 -p tcp -m comment --comment "kube-system/tiller-deploy:tiller cluster IP" -m tcp --dport 44134 -j KUBE-SVC-K7J76NXP7AUZVFGS
-A KUBE-SERVICES ! -s 192.168.1.0/24 -d 10.254.0.102/32 -p tcp -m comment --comment "ncms/clcm-api: cluster IP" -m tcp --dport 8083 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.254.0.102/32 -p tcp -m comment --comment "ncms/clcm-api: cluster IP" -m tcp --dport 8083 -j KUBE-SVC-BGZINMN3OOAODBSK
-A KUBE-SERVICES ! -s 192.168.1.0/24 -d 10.254.21.26/32 -p tcp -m comment --comment "ncms/app-api-ncms-app:https cluster IP" -m tcp --dport 8443 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.254.21.26/32 -p tcp -m comment --comment "ncms/app-api-ncms-app:https cluster IP" -m tcp --dport 8443 -j KUBE-SVC-4CTFL6F4RLITD2IR
-A KUBE-SERVICES ! -s 192.168.1.0/24 -d 10.254.148.137/32 -p tcp -m comment --comment "ncms/bcmt-yum-repo-service: cluster IP" -m tcp --dport 32091 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.254.148.137/32 -p tcp -m comment --comment "ncms/bcmt-yum-repo-service: cluster IP" -m tcp --dport 32091 -j KUBE-SVC-GCTYBQLDVAIPCBAU
-A KUBE-SERVICES -d 192.16.1.51/32 -p tcp -m comment --comment "ncms/bcmt-yum-repo-service: external IP" -m tcp --dport 32091 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 192.16.1.51/32 -p tcp -m comment --comment "ncms/bcmt-yum-repo-service: external IP" -m tcp --dport 32091 -m physdev ! --physdev-is-in -m addrtype ! --src-type LOCAL -j KUBE-SVC-GCTYBQLDVAIPCBAU
-A KUBE-SERVICES -d 192.16.1.51/32 -p tcp -m comment --comment "ncms/bcmt-yum-repo-service: external IP" -m tcp --dport 32091 -m addrtype --dst-type LOCAL -j KUBE-SVC-GCTYBQLDVAIPCBAU
-A KUBE-SERVICES -d 192.16.1.29/32 -p tcp -m comment --comment "ncms/bcmt-yum-repo-service: external IP" -m tcp --dport 32091 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 192.16.1.29/32 -p tcp -m comment --comment "ncms/bcmt-yum-repo-service: external IP" -m tcp --dport 32091 -m physdev ! --physdev-is-in -m addrtype ! --src-type LOCAL -j KUBE-SVC-GCTYBQLDVAIPCBAU
-A KUBE-SERVICES -d 192.16.1.29/32 -p tcp -m comment --comment "ncms/bcmt-yum-repo-service: external IP" -m tcp --dport 32091 -m addrtype --dst-type LOCAL -j KUBE-SVC-GCTYBQLDVAIPCBAU
-A KUBE-SERVICES -d 192.16.1.64/32 -p tcp -m comment --comment "ncms/bcmt-yum-repo-service: external IP" -m tcp --dport 32091 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 192.16.1.64/32 -p tcp -m comment --comment "ncms/bcmt-yum-repo-service: external IP" -m tcp --dport 32091 -m physdev ! --physdev-is-in -m addrtype ! --src-type LOCAL -j KUBE-SVC-GCTYBQLDVAIPCBAU
-A KUBE-SERVICES -d 192.16.1.64/32 -p tcp -m comment --comment "ncms/bcmt-yum-repo-service: external IP" -m tcp --dport 32091 -m addrtype --dst-type LOCAL -j KUBE-SVC-GCTYBQLDVAIPCBAU
-A KUBE-SERVICES ! -s 192.168.1.0/24 -d 10.254.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.254.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-ERIFXISQEP7F7OF4
-A KUBE-SERVICES ! -s 192.168.1.0/24 -d 10.254.161.95/32 -p tcp -m comment --comment "kube-system/heapster: cluster IP" -m tcp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.254.161.95/32 -p tcp -m comment --comment "kube-system/heapster: cluster IP" -m tcp --dport 80 -j KUBE-SVC-BJM46V3U5RZHCFRZ
-A KUBE-SERVICES ! -s 192.168.1.0/24 -d 10.254.0.100/32 -p tcp -m comment --comment "ncms/glusterfs-cluster: cluster IP" -m tcp --dport 24007 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.254.0.100/32 -p tcp -m comment --comment "ncms/glusterfs-cluster: cluster IP" -m tcp --dport 24007 -j KUBE-SVC-E4IO3N56OWLWVIM5
-A KUBE-SERVICES ! -s 192.168.1.0/24 -d 10.254.0.99/32 -p tcp -m comment --comment "ncms/bcmt-api: cluster IP" -m tcp --dport 8082 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.254.0.99/32 -p tcp -m comment --comment "ncms/bcmt-api: cluster IP" -m tcp --dport 8082 -j KUBE-SVC-NMG6BVPK2ZFNWNWF
-A KUBE-SERVICES ! -s 192.168.1.0/24 -d 10.254.176.197/32 -p tcp -m comment --comment "ncms/app-registry:registry cluster IP" -m tcp --dport 5000 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.254.176.197/32 -p tcp -m comment --comment "ncms/app-registry:registry cluster IP" -m tcp --dport 5000 -j KUBE-SVC-NRRD52Q4PFFHZPMX
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-4CTFL6F4RLITD2IR -j KUBE-SEP-MF6XUIX2DBSFLCAR
-A KUBE-SVC-6LIXASSUS2NL45YH -j KUBE-SEP-PB2COJNJ7VIMLJPR
-A KUBE-SVC-A33F7BKULY3UTOJ2 -j KUBE-SEP-DRQOGBAO47QNIPVC
-A KUBE-SVC-BGZINMN3OOAODBSK -j KUBE-SEP-YMQ5PNYJND7UQY4A
-A KUBE-SVC-BJM46V3U5RZHCFRZ -j KUBE-SEP-H6E4XYOQYQXKZZMO
-A KUBE-SVC-E4IO3N56OWLWVIM5 -m statistic --mode random --probability 0.33332999982 -j KUBE-SEP-PHR3XTVU3ILKE2MV
-A KUBE-SVC-E4IO3N56OWLWVIM5 -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-XZE4UVKLCDJESKZE
-A KUBE-SVC-E4IO3N56OWLWVIM5 -j KUBE-SEP-L3UPAOQ5VBZHUYBN
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m statistic --mode random --probability 0.33332999982 -j KUBE-SEP-V63URAHK76NUO5YS
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-G2QRSU3RNTMCCZD2
-A KUBE-SVC-ERIFXISQEP7F7OF4 -j KUBE-SEP-XQGQWP4ONHIDJ4PX
-A KUBE-SVC-GCTYBQLDVAIPCBAU -m statistic --mode random --probability 0.33332999982 -j KUBE-SEP-UOAC6H45GU42FIJE
-A KUBE-SVC-GCTYBQLDVAIPCBAU -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-E5SH72U7QA6TI37N
-A KUBE-SVC-GCTYBQLDVAIPCBAU -j KUBE-SEP-UY4FAV4HYQKMRI7Y
-A KUBE-SVC-H264ZQILZHRJ5NQR -m statistic --mode random --probability 0.25000000000 -j KUBE-SEP-SIT6FOK67ADJNBI4
-A KUBE-SVC-H264ZQILZHRJ5NQR -m statistic --mode random --probability 0.33332999982 -j KUBE-SEP-HSGO6WAI7KT77UMI
-A KUBE-SVC-H264ZQILZHRJ5NQR -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-UTYHUYSZHUUEPHO5
-A KUBE-SVC-H264ZQILZHRJ5NQR -j KUBE-SEP-T2O54T5HMBSDYKYD
-A KUBE-SVC-K7J76NXP7AUZVFGS -j KUBE-SEP-OBQ4M2DFGCN6O7OQ
-A KUBE-SVC-LC5QY66VUV2HJ6WZ -j KUBE-SEP-K7JCWDPNFYGHOKTA
-A KUBE-SVC-N5GGERZV6LKDHGVD -j KUBE-SEP-YENWDQVLSUU52LMW
-A KUBE-SVC-NMG6BVPK2ZFNWNWF -m statistic --mode random --probability 0.33332999982 -j KUBE-SEP-3P5OZ2Y6H7P2AE54
-A KUBE-SVC-NMG6BVPK2ZFNWNWF -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-YTUN5MYBPEJ5476W
-A KUBE-SVC-NMG6BVPK2ZFNWNWF -j KUBE-SEP-CF3T254QPZ7J5QQP
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m statistic --mode random --probability 0.33332999982 -j KUBE-SEP-3VPWKSZIGUWJWZOF
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-O5DTHTYOWZSX2BPC
-A KUBE-SVC-NPX46M4PTMTKRN6Y -j KUBE-SEP-M4JERVXYORADU5AZ
-A KUBE-SVC-NRRD52Q4PFFHZPMX -j KUBE-SEP-EA56CDCS7UYOWX2C
-A KUBE-SVC-R7VIYLB66COEE3CB -j KUBE-SEP-RUVXSHOHP3PSXM35
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m statistic --mode random --probability 0.33332999982 -j KUBE-SEP-2RWZTMKGKH32LWJ4
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-S4EWUDGANLFP75YP
-A KUBE-SVC-TCOU7JCQXEZGVUNU -j KUBE-SEP-IXDCICTBIWPAJTI7
-A KUBE-SVC-XI5SUYJ37EMWLQAJ -j KUBE-SEP-Z5PHILQDCQP4LCWB
-A KUBE-SVC-XU6G7KNAVGMVPMGP -j KUBE-SEP-7SKUVD7HGWO7O7FY
-A cali-OUTPUT -m comment --comment "cali:GBTAv2p5CwevEyJm" -j cali-fip-dnat
-A cali-POSTROUTING -m comment --comment "cali:Z-c7XtVd2Bq7s_hA" -j cali-fip-snat
-A cali-POSTROUTING -m comment --comment "cali:nYKhEzDlr11Jccal" -j cali-nat-outgoing
-A cali-PREROUTING -m comment --comment "cali:r6XmIziWUJsdOK6Z" -j cali-fip-dnat
-A cali-nat-outgoing -m comment --comment "cali:Dw4T8UWPnCLxRJiI" -m set --match-set cali40masq-ipam-pools src -m set ! --match-set cali40all-ipam-pools dst -j MASQUERADE
COMMIT
# Completed on Tue Jul 23 03:38:01 2019
# Generated by iptables-save v1.4.21 on Tue Jul 23 03:38:01 2019
*filter
:INPUT ACCEPT [858:3292054]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1355:3316828]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
:KUBE-EXTERNAL-SERVICES - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-SERVICES - [0:0]
:cali-FORWARD - [0:0]
:cali-INPUT - [0:0]
:cali-OUTPUT - [0:0]
:cali-failsafe-in - [0:0]
:cali-failsafe-out - [0:0]
:cali-from-hep-forward - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-from-wl-dispatch - [0:0]
:cali-from-wl-dispatch-e - [0:0]
:cali-fw-cali0bc49c60f3d - [0:0]
:cali-fw-cali79a490e4783 - [0:0]
:cali-fw-cali9206f171ff2 - [0:0]
:cali-fw-caliba13c7900ae - [0:0]
:cali-fw-calie007696772f - [0:0]
:cali-fw-calie6930dcd87e - [0:0]
:cali-fw-caliea8398d519d - [0:0]
:cali-pi-_-w86bMd_bL8-CKRBUaL - [0:0]
:cali-po-_-w86bMd_bL8-CKRBUaL - [0:0]
:cali-pri-_6vXOq7XjxDfVVvJMIr - [0:0]
:cali-pri-_7eJeZs0ZhIxT22YN2C - [0:0]
:cali-pri-_Iv5DLIoH8BjXD9FGvw - [0:0]
:cali-pri-_JAPFZC4gLhluu4S82- - [0:0]
:cali-pri-_u2Tn2rSoAPffvE7JO6 - [0:0]
:cali-pri-_v4Syg_18WRewS0E5i5 - [0:0]
:cali-pri-kns.kube-system - [0:0]
:cali-pri-kns.ncms - [0:0]
:cali-pri-ksa.ncms.bcmt-redis - [0:0]
:cali-pro-_6vXOq7XjxDfVVvJMIr - [0:0]
:cali-pro-_7eJeZs0ZhIxT22YN2C - [0:0]
:cali-pro-_Iv5DLIoH8BjXD9FGvw - [0:0]
:cali-pro-_JAPFZC4gLhluu4S82- - [0:0]
:cali-pro-_u2Tn2rSoAPffvE7JO6 - [0:0]
:cali-pro-_v4Syg_18WRewS0E5i5 - [0:0]
:cali-pro-kns.kube-system - [0:0]
:cali-pro-kns.ncms - [0:0]
:cali-pro-ksa.ncms.bcmt-redis - [0:0]
:cali-to-hep-forward - [0:0]
:cali-to-host-endpoint - [0:0]
:cali-to-wl-dispatch - [0:0]
:cali-to-wl-dispatch-e - [0:0]
:cali-tw-cali0bc49c60f3d - [0:0]
:cali-tw-cali79a490e4783 - [0:0]
:cali-tw-cali9206f171ff2 - [0:0]
:cali-tw-caliba13c7900ae - [0:0]
:cali-tw-calie007696772f - [0:0]
:cali-tw-calie6930dcd87e - [0:0]
:cali-tw-caliea8398d519d - [0:0]
:cali-wl-to-host - [0:0]
-A INPUT -m comment --comment "cali:Cz_u1IQiXIMmKD4c" -j cali-INPUT
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A INPUT -j KUBE-FIREWALL
-A INPUT -p tcp -m set --match-set bcmtwhitelist src -m tcp --sport 8443 -m comment --comment BCMT-security -j ACCEPT
-A INPUT -p tcp -m set --match-set bcmtwhitelist src -m tcp --dport 8443 -m comment --comment BCMT-security -j ACCEPT
-A INPUT -p tcp -m set --match-set bcmtwhitelist src -m tcp --sport 8443 -m comment --comment BCMT-security -j ACCEPT
-A INPUT -p tcp -m set --match-set bcmtwhitelist src -m tcp --dport 8443 -m comment --comment BCMT-security -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8443 -m comment --comment BCMT-security -j DROP
-A FORWARD -m comment --comment "cali:wUHhoiAYhphO9Mso" -j cali-FORWARD
-A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 2380 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 2379 -j ACCEPT
-A DOCKER -d 172.17.0.3/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 60053 -j ACCEPT
-A DOCKER -d 172.17.0.3/32 ! -i docker0 -o docker0 -p udp -m udp --dport 60053 -j ACCEPT
-A DOCKER -d 172.17.0.5/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 5000 -j ACCEPT
-A DOCKER -d 172.17.0.4/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 5000 -j ACCEPT
-A DOCKER-ISOLATION -j RETURN
-A KUBE-FIREWALL -m comment --comment "kubernetes firewall for dropping marked packets" -m mark --mark 0x8000/0x8000 -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A KUBE-FORWARD -s 192.168.1.0/24 -m comment --comment "kubernetes forwarding conntrack pod source rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-FORWARD -d 192.168.1.0/24 -m comment --comment "kubernetes forwarding conntrack pod destination rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-FORWARD -m comment --comment "cali:vjrMJCRpqwy5oRoX" -j MARK --set-xmark 0x0/0xe0000
-A cali-FORWARD -m comment --comment "cali:A_sPAO0mcxbT9mOV" -m mark --mark 0x0/0x10000 -j cali-from-hep-forward
-A cali-FORWARD -i cali+ -m comment --comment "cali:8ZoYfO5HKXWbB3pk" -j cali-from-wl-dispatch
-A cali-FORWARD -o cali+ -m comment --comment "cali:jdEuaPBe14V2hutn" -j cali-to-wl-dispatch
-A cali-FORWARD -m comment --comment "cali:12bc6HljsMKsmfr-" -j cali-to-hep-forward
-A cali-FORWARD -m comment --comment "cali:MH9kMp5aNICL-Olv" -m comment --comment "Policy explicitly accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-INPUT -i cali+ -m comment --comment "cali:FewJpBykm9iJ-YNH" -g cali-wl-to-host
-A cali-INPUT -m comment --comment "cali:hder3ARWznqqv8Va" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-INPUT -m comment --comment "cali:xgOu2uJft6H9oDGF" -j MARK --set-xmark 0x0/0xf0000
-A cali-INPUT -m comment --comment "cali:_-d-qojMfHM6NwBo" -j cali-from-host-endpoint
-A cali-INPUT -m comment --comment "cali:LqmE76MP94lZTGhA" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-OUTPUT -m comment --comment "cali:Mq1_rAdXXH3YkrzW" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-OUTPUT -o cali+ -m comment --comment "cali:69FkRTJDvD5Vu6Vl" -j RETURN
-A cali-OUTPUT -m comment --comment "cali:Fskumj4SGQtDV6GC" -j MARK --set-xmark 0x0/0xf0000
-A cali-OUTPUT -m comment --comment "cali:8rXMdo5sNesjJxGc" -j cali-to-host-endpoint
-A cali-OUTPUT -m comment --comment "cali:Ja-pnrHi-PrNKxgd" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:wWFQM43tJU7wwnFZ" -m multiport --dports 22 -j ACCEPT
-A cali-failsafe-in -p udp -m comment --comment "cali:LwNV--R8MjeUYacw" -m multiport --dports 68 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:QOO5NUOqOSS1_Iw0" -m multiport --dports 179 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:cwZWoBSwVeIAZmVN" -m multiport --dports 2379 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:7FbNXT91kugE_upR" -m multiport --dports 2380 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:ywE9WYUBEpve70WT" -m multiport --dports 6666 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:l-WQSVBf_lygPR0J" -m multiport --dports 6667 -j ACCEPT
-A cali-failsafe-out -p udp -m comment --comment "cali:82hjfji-wChFhAqL" -m multiport --dports 53 -j ACCEPT
-A cali-failsafe-out -p udp -m comment --comment "cali:TNM3RfEjbNr72hgH" -m multiport --dports 67 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:ycxKitIl4u3dK0HR" -m multiport --dports 179 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:hxjEWyxdkXXkdvut" -m multiport --dports 2379 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:cA_GLtruuvG88KiO" -m multiport --dports 2380 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:Sb1hkLYFMrKS6r01" -m multiport --dports 6666 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:UwLSebGONJUG4yG-" -m multiport --dports 6667 -j ACCEPT
-A cali-from-wl-dispatch -i cali0bc49c60f3d -m comment --comment "cali:Gf7i7e8C2rD_logb" -g cali-fw-cali0bc49c60f3d
-A cali-from-wl-dispatch -i cali79a490e4783 -m comment --comment "cali:PVTm9iMCAmM2pknw" -g cali-fw-cali79a490e4783
-A cali-from-wl-dispatch -i cali9206f171ff2 -m comment --comment "cali:sEIto5_r17ksHryX" -g cali-fw-cali9206f171ff2
-A cali-from-wl-dispatch -i caliba13c7900ae -m comment --comment "cali:FrQADyC9xo4U1adt" -g cali-fw-caliba13c7900ae
-A cali-from-wl-dispatch -i calie+ -m comment --comment "cali:eH6DRw1dpgG_pSjj" -g cali-from-wl-dispatch-e
-A cali-from-wl-dispatch -m comment --comment "cali:0F5NNBPvKdUoYd-z" -m comment --comment "Unknown interface" -j DROP
-A cali-from-wl-dispatch-e -i calie007696772f -m comment --comment "cali:K5TTlExnVssi0kMR" -g cali-fw-calie007696772f
-A cali-from-wl-dispatch-e -i calie6930dcd87e -m comment --comment "cali:u_2SJ4gPLuh_gdBo" -g cali-fw-calie6930dcd87e
-A cali-from-wl-dispatch-e -i caliea8398d519d -m comment --comment "cali:Di8uz7B4fNnOF9Pb" -g cali-fw-caliea8398d519d
-A cali-from-wl-dispatch-e -m comment --comment "cali:OP_-rGyTQE5bSnmz" -m comment --comment "Unknown interface" -j DROP
-A cali-fw-cali0bc49c60f3d -m comment --comment "cali:OxLVOaWfMH7x2M8k" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali0bc49c60f3d -m comment --comment "cali:vjxWxZ59ccp4vq5y" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali0bc49c60f3d -m comment --comment "cali:aEoPlqjdj-Uf7fBj" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-cali0bc49c60f3d -m comment --comment "cali:45v06GI7a2WzHUQ7" -j cali-pro-kns.ncms
-A cali-fw-cali0bc49c60f3d -m comment --comment "cali:7YZUNL4WIifpr7tL" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali0bc49c60f3d -m comment --comment "cali:aQxsvt0U3gsOz260" -j cali-pro-_JAPFZC4gLhluu4S82-
-A cali-fw-cali0bc49c60f3d -m comment --comment "cali:ckDp_xSRlz2Vbo50" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali0bc49c60f3d -m comment --comment "cali:UsMby2Tzbx8qHqWD" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-cali79a490e4783 -m comment --comment "cali:pyNQ1M4lrdoKhACs" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali79a490e4783 -m comment --comment "cali:VrKBjduzGm7N9x6R" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali79a490e4783 -m comment --comment "cali:z6tBBFoz3jDI5036" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-cali79a490e4783 -m comment --comment "cali:r-tnf1jIrok12LMS" -m comment --comment "Start of policies" -j MARK --set-xmark 0x0/0x20000
-A cali-fw-cali79a490e4783 -m comment --comment "cali:hfgZshrdkYZi_uwa" -m mark --mark 0x0/0x20000 -j cali-po-_-w86bMd_bL8-CKRBUaL
-A cali-fw-cali79a490e4783 -m comment --comment "cali:UEgGuLAsXtFkp3Uy" -m comment --comment "Return if policy accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali79a490e4783 -m comment --comment "cali:T9IdIKDLYdV0deiH" -m comment --comment "Drop if no policies passed packet" -m mark --mark 0x0/0x20000 -j DROP
-A cali-fw-cali79a490e4783 -m comment --comment "cali:YvDJFnpIQlyxBg70" -j cali-pro-kns.ncms
-A cali-fw-cali79a490e4783 -m comment --comment "cali:8M-bWIsgjzwQz6Hy" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali79a490e4783 -m comment --comment "cali:xOHAoGiEDYj0zKZ2" -j cali-pro-ksa.ncms.bcmt-redis
-A cali-fw-cali79a490e4783 -m comment --comment "cali:ZbFLRhYTSS9LJ4m8" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali79a490e4783 -m comment --comment "cali:iUQtCwB2y7O2Sguc" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-cali9206f171ff2 -m comment --comment "cali:J7hCM3ue5hBEL6k2" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali9206f171ff2 -m comment --comment "cali:I4flaDq_E_O2EITV" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali9206f171ff2 -m comment --comment "cali:vSIFa81bDFap-hy5" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-cali9206f171ff2 -m comment --comment "cali:Jj_Yti1uJxivLMsy" -j cali-pro-kns.kube-system
-A cali-fw-cali9206f171ff2 -m comment --comment "cali:8gGe3W1t_veCK3ko" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali9206f171ff2 -m comment --comment "cali:b6VVUgdMx5rDodzy" -j cali-pro-_v4Syg_18WRewS0E5i5
-A cali-fw-cali9206f171ff2 -m comment --comment "cali:zBvngVmMDc20vvRM" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali9206f171ff2 -m comment --comment "cali:K3BrvrV1XIsrQywH" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-caliba13c7900ae -m comment --comment "cali:DX57ZU7bxPsDSsV7" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-caliba13c7900ae -m comment --comment "cali:R7G7zmUSQUzR0q1_" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-caliba13c7900ae -m comment --comment "cali:KAYwbmHOxTUgW5H9" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-caliba13c7900ae -m comment --comment "cali:cUjcoevqlz0gqshS" -j cali-pro-kns.ncms
-A cali-fw-caliba13c7900ae -m comment --comment "cali:b369AImeroV5WA_1" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-caliba13c7900ae -m comment --comment "cali:pcjodS5zE-boIvb7" -j cali-pro-_6vXOq7XjxDfVVvJMIr
-A cali-fw-caliba13c7900ae -m comment --comment "cali:qR21IccestXzmVcv" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-caliba13c7900ae -m comment --comment "cali:5K9k55JyOUpamOH7" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-calie007696772f -m comment --comment "cali:T98uNPwQ6PaEvPVI" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-calie007696772f -m comment --comment "cali:iBSLdrH3pJDPrpkE" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-calie007696772f -m comment --comment "cali:MW9FW_9J8hhrM08G" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-calie007696772f -m comment --comment "cali:7pYeoA3BSb5C9EOL" -j cali-pro-kns.kube-system
-A cali-fw-calie007696772f -m comment --comment "cali:TI3q_-oiWvEiQeoP" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-calie007696772f -m comment --comment "cali:aED0FTpr3xyaVHO5" -j cali-pro-_Iv5DLIoH8BjXD9FGvw
-A cali-fw-calie007696772f -m comment --comment "cali:XzkEMmO0YtO13rsj" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-calie007696772f -m comment --comment "cali:1GhC_xgysvjpMz7F" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-calie6930dcd87e -m comment --comment "cali:O9YfauR1ijaaGXJD" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-calie6930dcd87e -m comment --comment "cali:zDrb7gcRakV_OZ3p" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-calie6930dcd87e -m comment --comment "cali:e1lcXkqwkmZuJIXX" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-calie6930dcd87e -m comment --comment "cali:X5Q-t0B2lDqesshR" -j cali-pro-kns.ncms
-A cali-fw-calie6930dcd87e -m comment --comment "cali:cDKUWhSCQK6fxr0G" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-calie6930dcd87e -m comment --comment "cali:Cg9iqTGJN7BWJEkA" -j cali-pro-_7eJeZs0ZhIxT22YN2C
-A cali-fw-calie6930dcd87e -m comment --comment "cali:jhWfVFOLNbG8Ue3h" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-calie6930dcd87e -m comment --comment "cali:Svg_FzkIhHBq48Tq" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-caliea8398d519d -m comment --comment "cali:JigKs0tKieuS9Sb3" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-caliea8398d519d -m comment --comment "cali:YxSNZUszdncSMnVt" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-caliea8398d519d -m comment --comment "cali:y7JumvuMHrgp41Ep" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-caliea8398d519d -m comment --comment "cali:ydkTjnsYaANuEpyj" -j cali-pro-kns.kube-system
-A cali-fw-caliea8398d519d -m comment --comment "cali:32RBSg96E1VxIc7t" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-caliea8398d519d -m comment --comment "cali:DBldfmKFz6HGJTj0" -j cali-pro-_u2Tn2rSoAPffvE7JO6
-A cali-fw-caliea8398d519d -m comment --comment "cali:tFCPmdyLBr2UlM7U" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-caliea8398d519d -m comment --comment "cali:mDWPp0OvOCILMlu7" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-pi-_-w86bMd_bL8-CKRBUaL -m comment --comment "cali:R2udFT2hfN45YESY" -j MARK --set-xmark 0x40000/0xc0000
-A cali-pi-_-w86bMd_bL8-CKRBUaL -s 10.10.1.0/24 -m comment --comment "cali:p5h8hm_36yZUqZvl" -j MARK --set-xmark 0x0/0x40000
-A cali-pi-_-w86bMd_bL8-CKRBUaL -s 10.10.0.0/16 -p tcp -m comment --comment "cali:v-llWYlUSIWIojDO" -m multiport --dports 6379 -m mark --mark 0x40000/0x40000 -j MARK --set-xmark 0x10000/0x10000
-A cali-pi-_-w86bMd_bL8-CKRBUaL -m comment --comment "cali:ueUewffixjCspPIX" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pi-_-w86bMd_bL8-CKRBUaL -p tcp -m comment --comment "cali:VqkZmVIYeDv6tXzk" -m set --match-set cali40s:F7ZiXz_PbMa5Hy2nQRJmYga src -m multiport --dports 6379 -j MARK --set-xmark 0x10000/0x10000
-A cali-pi-_-w86bMd_bL8-CKRBUaL -m comment --comment "cali:LB1T1dsowpqsBJjb" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pi-_-w86bMd_bL8-CKRBUaL -p tcp -m comment --comment "cali:rIIK86VMgLoiCLxY" -m set --match-set cali40s:wshVv5vS9KoqQCk0vejZOWN src -m multiport --dports 6379 -j MARK --set-xmark 0x10000/0x10000
-A cali-pi-_-w86bMd_bL8-CKRBUaL -m comment --comment "cali:XL5MAjigAp_MK7j-" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-po-_-w86bMd_bL8-CKRBUaL -d 10.0.0.0/24 -p tcp -m comment --comment "cali:xknN47nMfQJsVAEH" -m multiport --dports 5978 -j MARK --set-xmark 0x10000/0x10000
-A cali-po-_-w86bMd_bL8-CKRBUaL -m comment --comment "cali:Is9GYpEhanIAfvw-" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pri-kns.kube-system -m comment --comment "cali:zoH5gU6U55FKZxEo" -j MARK --set-xmark 0x10000/0x10000
-A cali-pri-kns.kube-system -m comment --comment "cali:bcGRIJcyOS9dgBiB" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pri-kns.ncms -m comment --comment "cali:58edQiqEteRMbEAT" -j MARK --set-xmark 0x10000/0x10000
-A cali-pri-kns.ncms -m comment --comment "cali:Yb3wQrXp5K5wrS8f" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pro-kns.kube-system -m comment --comment "cali:-50oJuMfLVO3LkBk" -j MARK --set-xmark 0x10000/0x10000
-A cali-pro-kns.kube-system -m comment --comment "cali:ztVPKv1UYejNzm1g" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pro-kns.ncms -m comment --comment "cali:qLjN_mQQDJKB_QDs" -j MARK --set-xmark 0x10000/0x10000
-A cali-pro-kns.ncms -m comment --comment "cali:SbW8PgOIa1aGkd8P" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-to-wl-dispatch -o cali0bc49c60f3d -m comment --comment "cali:Mq2uKD_8BACXzT74" -g cali-tw-cali0bc49c60f3d
-A cali-to-wl-dispatch -o cali79a490e4783 -m comment --comment "cali:HqXE1uv-LZK5HfPx" -g cali-tw-cali79a490e4783
-A cali-to-wl-dispatch -o cali9206f171ff2 -m comment --comment "cali:G86LnIqCpZarMKGI" -g cali-tw-cali9206f171ff2
-A cali-to-wl-dispatch -o caliba13c7900ae -m comment --comment "cali:3pEUETPW3AjPd_qy" -g cali-tw-caliba13c7900ae
-A cali-to-wl-dispatch -o calie+ -m comment --comment "cali:Wm2AVNI1i8Yo3X8k" -g cali-to-wl-dispatch-e
-A cali-to-wl-dispatch -m comment --comment "cali:b5-AyTLOtwonX0fm" -m comment --comment "Unknown interface" -j DROP
-A cali-to-wl-dispatch-e -o calie007696772f -m comment --comment "cali:3Debh-SpiH9oYnEP" -g cali-tw-calie007696772f
-A cali-to-wl-dispatch-e -o calie6930dcd87e -m comment --comment "cali:xSRIqjNMtARKeJmX" -g cali-tw-calie6930dcd87e
-A cali-to-wl-dispatch-e -o caliea8398d519d -m comment --comment "cali:yzpppJROWXfA3IhW" -g cali-tw-caliea8398d519d
-A cali-to-wl-dispatch-e -m comment --comment "cali:GgJrg5zZA0cRQj-p" -m comment --comment "Unknown interface" -j DROP
-A cali-tw-cali0bc49c60f3d -m comment --comment "cali:U5aEkVmzVOR7TSW9" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali0bc49c60f3d -m comment --comment "cali:yIp_cwajtCwHYPPs" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali0bc49c60f3d -m comment --comment "cali:XeWyGKjy-Jll7r-4" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-cali0bc49c60f3d -m comment --comment "cali:VJLmGaoE2NdIFJ5d" -j cali-pri-kns.ncms
-A cali-tw-cali0bc49c60f3d -m comment --comment "cali:dJUTRzqfkZYYy8gg" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali0bc49c60f3d -m comment --comment "cali:0N7kzRs5Rw-xVEUT" -j cali-pri-_JAPFZC4gLhluu4S82-
-A cali-tw-cali0bc49c60f3d -m comment --comment "cali:F33LVvrsDHjbaJOL" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali0bc49c60f3d -m comment --comment "cali:hoTJIkGCGNAc1dtM" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-cali79a490e4783 -m comment --comment "cali:EiaOLZM7N9oqFqbG" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali79a490e4783 -m comment --comment "cali:zFowr1bTkAppckB5" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali79a490e4783 -m comment --comment "cali:iLntcj6514HyscSP" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-cali79a490e4783 -m comment --comment "cali:JUMyrGSx1xjE6pnN" -m comment --comment "Start of policies" -j MARK --set-xmark 0x0/0x20000
-A cali-tw-cali79a490e4783 -m comment --comment "cali:QajP7JizqCjj4vuX" -m mark --mark 0x0/0x20000 -j cali-pi-_-w86bMd_bL8-CKRBUaL
-A cali-tw-cali79a490e4783 -m comment --comment "cali:-mMQrMlY20RppUeg" -m comment --comment "Return if policy accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali79a490e4783 -m comment --comment "cali:YgqTIgX1SyTbkaxS" -m comment --comment "Drop if no policies passed packet" -m mark --mark 0x0/0x20000 -j DROP
-A cali-tw-cali79a490e4783 -m comment --comment "cali:Vuw50bxwkk0CV4Mo" -j cali-pri-kns.ncms
-A cali-tw-cali79a490e4783 -m comment --comment "cali:emsV95Df6vmb4HgC" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali79a490e4783 -m comment --comment "cali:Qv_616TkTZSl7OcC" -j cali-pri-ksa.ncms.bcmt-redis
-A cali-tw-cali79a490e4783 -m comment --comment "cali:9ZKU31rdxjQZyeUv" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali79a490e4783 -m comment --comment "cali:nftowlguMVUOiJ5R" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-cali9206f171ff2 -m comment --comment "cali:UbDcAxbatZzJTWSu" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali9206f171ff2 -m comment --comment "cali:iGtFAVXXpHePwrTl" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali9206f171ff2 -m comment --comment "cali:N-9cd9eiAHsxm1Hk" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-cali9206f171ff2 -m comment --comment "cali:Pxd2eUC-xVlKXW2t" -j cali-pri-kns.kube-system
-A cali-tw-cali9206f171ff2 -m comment --comment "cali:g1jCc67LPjXoEugs" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali9206f171ff2 -m comment --comment "cali:7jLfbh_-d0s1GsPG" -j cali-pri-_v4Syg_18WRewS0E5i5
-A cali-tw-cali9206f171ff2 -m comment --comment "cali:Y7diUSpRheTyi7Op" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali9206f171ff2 -m comment --comment "cali:2BetRk5NqKupySRF" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-caliba13c7900ae -m comment --comment "cali:gwzRMQHlleYKek2w" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-caliba13c7900ae -m comment --comment "cali:k6MWT8pJ0CiE8Xw0" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-caliba13c7900ae -m comment --comment "cali:91F43aDOzP7r6Bye" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-caliba13c7900ae -m comment --comment "cali:olz35RM2vcRkS37F" -j cali-pri-kns.ncms
-A cali-tw-caliba13c7900ae -m comment --comment "cali:Ij_h4Aq7BsKMhDC3" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-caliba13c7900ae -m comment --comment "cali:WNcEge26_WbJctW3" -j cali-pri-_6vXOq7XjxDfVVvJMIr
-A cali-tw-caliba13c7900ae -m comment --comment "cali:2UUOi-7O7azJAMlO" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-caliba13c7900ae -m comment --comment "cali:hqkFIZ6RBSCVm4je" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-calie007696772f -m comment --comment "cali:N2tbVyKTWngHNilY" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-calie007696772f -m comment --comment "cali:ewIPd6y0VnO6TPl_" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-calie007696772f -m comment --comment "cali:BsRu7TAiDv9ZleOy" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-calie007696772f -m comment --comment "cali:vcAyC3BWXnxlzE8C" -j cali-pri-kns.kube-system
-A cali-tw-calie007696772f -m comment --comment "cali:KWjbsDxb1b8Yk-EU" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-calie007696772f -m comment --comment "cali:k6mIn9LjKlo1GkYi" -j cali-pri-_Iv5DLIoH8BjXD9FGvw
-A cali-tw-calie007696772f -m comment --comment "cali:WOWhvAZcZ1prDfFl" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-calie007696772f -m comment --comment "cali:eIICxOxMkMwAKRyL" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-calie6930dcd87e -m comment --comment "cali:wp69JsSbhNyt-Y2g" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-calie6930dcd87e -m comment --comment "cali:fJEmM28oy3j2kV9J" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-calie6930dcd87e -m comment --comment "cali:WXdQZF9mC-M4hTUu" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-calie6930dcd87e -m comment --comment "cali:vfw-PyiNQmGpCfb9" -j cali-pri-kns.ncms
-A cali-tw-calie6930dcd87e -m comment --comment "cali:l9abYC42wu5_qdCR" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-calie6930dcd87e -m comment --comment "cali:Mf6wgK3bwkaQzkzV" -j cali-pri-_7eJeZs0ZhIxT22YN2C
-A cali-tw-calie6930dcd87e -m comment --comment "cali:ZFgALAXq9hkZXsMr" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-calie6930dcd87e -m comment --comment "cali:xURrmwTubceT3Bvt" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-caliea8398d519d -m comment --comment "cali:OsFCu_GvOvUeFcXL" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-caliea8398d519d -m comment --comment "cali:4TmBXF_ShVJWNh-d" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-caliea8398d519d -m comment --comment "cali:isKxoc07rdAYgnNk" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-caliea8398d519d -m comment --comment "cali:HdTtYEp7ersFdE3K" -j cali-pri-kns.kube-system
-A cali-tw-caliea8398d519d -m comment --comment "cali:2PgreNh8ubIE2Ibm" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-caliea8398d519d -m comment --comment "cali:D8BcXXmr6KNObMCx" -j cali-pri-_u2Tn2rSoAPffvE7JO6
-A cali-tw-caliea8398d519d -m comment --comment "cali:8s0v_gClLk8jCX1X" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-caliea8398d519d -m comment --comment "cali:xGbKv9vBVGelNuhO" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-wl-to-host -m comment --comment "cali:Ee9Sbo10IpVujdIY" -j cali-from-wl-dispatch
-A cali-wl-to-host -m comment --comment "cali:nSZbcOoG1xPONxb8" -m comment --comment "Configured DefaultEndpointToHostAction" -j ACCEPT
COMMIT
# Completed on Tue Jul 23 03:38:01 2019
